# rev

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: args.rs  lib.rs  main.rs  orchestrator.rs  runtime_detect.rs
cli/tests/: integration_tests.rs
core/: Cargo.toml
core/src/: constants.rs  error.rs  types.rs
delta/: Cargo.toml
delta/src/: filter.rs  lib.rs  merkle.rs  page_tracker.rs
docs/: usage.md
documentation/: implementation_plan.md
interceptor/: Cargo.toml
interceptor/src/: filter.rs  lib.rs  syscall_map.rs
interceptor/src/platform/: linux.rs  mock.rs  mod.rs  windows.rs
recorder/: Cargo.toml
recorder/src/: compressor.rs  lib.rs  reader.rs  writer.rs
recorder/tests/: recorder_tests.rs
replay/: Cargo.toml
replay/src/: fast_forward.rs  headless.rs  lib.rs
replay/src/runtimes/: mod.rs  node.rs  python.rs  ruby.rs
tui/: Cargo.toml
tui/src/: app.rs  inspector.rs  keybinds.rs  layout.rs  lib.rs  timeline.rs
