[workspace]
members = [
    "core",
    "interceptor",
    "recorder",
    "delta",
    "replay",
    "tui",
    "cli",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
bincode = "1.3"
lz4_flex = "0.11"
rusqlite = { version = "0.32", features = ["bundled"] }
blake3 = "1.5"
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
